--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,3 +1,9 @@
 .navbar {
     
 }
+.navbar h1 {
+    font-size:2em;
+    font-weight: 100;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #fff;
+}
